# CLI-To-Do-List-C-

./: CMakeLists.txt  README.md  list.hpp  list.txt  lista.txt  main.cpp
Debug/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ToDoList.sln  ToDoListCLI.vcxproj  ToDoListCLI.vcxproj.filters  ToDoListGUI.vcxproj  ToDoListGUI.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Release/: ALL_BUILD.vcxproj  CMakeCache.txt  ToDoList.sln  ToDoListCLI.vcxproj  ToDoListCLI.vcxproj.filters  ToDoListGUI.vcxproj  ToDoListGUI.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
include/glad/: glad.h
src/: glad.c  list.hpp  main.cpp  main_cli.cpp  main_gui.cpp
